--- a/.github/workflows/goreadme.yml
+++ b/.github/workflows/goreadme.yml
@@ -12,8 +12,8 @@ jobs:
         - name: Update readme according to Go doc
           uses: posener/goreadme@v1
           with:
-            badge-travisci: 'true'
-            badge-codecov: 'true'
+            #badge-travisci: 'true'
+            #badge-codecov: 'true'
             badge-godoc: 'true'
             badge-goreadme: 'true'
             # Optional: Token allows goreadme to comment the PR with diff preview.
